--- a/config.properties
+++ b/config.properties
@@ -1,5 +1,6 @@
 [SECTION_NAME]
 host = localhost
-user =
-password = 
+user = root
+password = 35795145
 auth_plugin = mysql_native_password
+api_key = be5e6db88388957
